Add "--add-opens" for ITs as well